--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,10 @@
 *.dll
 *.so
 *.dylib
+*.zip
 wow-twitch-extension
 # Test binary, build with `go test -c`
 *.test
-
+bin/
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
